# blinky2

./: CMakeLists.txt  link.ld  main.c  startup.c
